# pokemonsnap

./: CLAUDE.md  README.md  configure.py  decomp.yaml  extract_all_models.py  extract_textures.py  parse_texture.py  pokemonsnap.map  process_roms.py  pyproject.toml  renovate.json  show_mon_headers.py  splat.yaml  uint16_be.pal  uint16_le.pal  undefined_syms.txt
.github/workflows/: build.yml  format.yml
include/: anim_script.h
src/: 1520.c  46270.c  8A80.c  AA18E0.c
src/app_level/: 4FE780.c  icons.c  player.c
src/app_render/: 47380.c
src/beach/butterfree/: textures.c
src/beach/chansey/: model.c  model_hd.c  textures.c
src/beach/doduo/: model.c  model_hd.c  textures.c
src/beach/eevee/: model.c  model_hd.c  textures.c
src/beach/kangaskhan/: model.c  model_hd.c  textures.c
src/beach/lapras/: model.c  model_hd.c  textures.c
src/beach/meowth/: model.c  model_hd.c  textures.c
src/beach/pidgey/: model.c  model_hd.c  textures.c
src/beach/scyther/: textures.c
src/beach/snorlax/: model.c  model_hd.c  textures.c
src/camera_check/: 87A330.c
src/cave/articuno/: model.c  model_hd.c  textures.c
src/cave/ditto/: textures.c
src/cave/grimer/: textures.c
src/cave/jigglypuff/: model.c  model_hd.c  textures.c
src/cave/muk/: model.c  (+2 more)
src/oaks_lab/: 8A7360.c
src/photo_check/: 98C330.c
src/pokemon_album/: 9A6F70.c
src/rainbow/: 4A8160.c
src/sys/: dma.h
src/tunnel/: textures_0.c  textures_1.c  textures_2.c  tunnel.h
src/window/: layout.c
tools/: README_EXTRACT_TOOLS.md  extract_model.py  find_unkec64arg3.py  model_header.py  symbol_addrs.txt
(+572 files in other folders)
