[project]
name = "pokesnap"
version = "0"
description = "A WIP decomp of Pokemon Snap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "mapfile-parser>=2.12.0",
    "n64img>=0.3.3",
    "ninja-syntax>=1.7.2",
    "pypng>=0.20220715.0",
    "requests>=2.32.5",
    "spimdisasm>=1.39.0",
    "splat64[mips]>=0.36.3",
]
